tests/baselines/reference/callConstructorsES6_09.errors.txt
tests/cases/conformance/es7/callConstructors/es6/callConstructorsES6_09.ts(3,5): error TS9003: Callable classes are not currently supported.
tests/cases/conformance/es7/callConstructors/es6/callConstructorsES6_09.ts(8,10): error TS2346: Supplied parameters do not match any signature of call target.
tests/cases/conformance/es7/callConstructors/es6/callConstructorsES6_09.ts(9,10): error TS2348: Value of type 'typeof C' is not callable. Did you mean to include 'new'?
tests/cases/conformance/es7/callConstructors/es6/callConstructorsES6_09.ts(10,10): error TS2348: Value of type 'typeof C' is not callable. Did you mean to include 'new'?


==== tests/cases/conformance/es7/callConstructors/es6/callConstructorsES6_09.ts (4 errors) ====
    
    const C = class C {
        static call constructor() {
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~
            return new C;
    ~~~~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS9003: Callable classes are not currently supported.
    };
    
    let c1 = new C(10);
             ~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    let c2 = C();
             ~~~
!!! error TS2348: Value of type 'typeof C' is not callable. Did you mean to include 'new'?
    let c3 = C(100);
             ~~~~~~
!!! error TS2348: Value of type 'typeof C' is not callable. Did you mean to include 'new'?